--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -39,6 +39,9 @@ p code {
 pre code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
 }
+pre {
+  overflow: auto;
+}
 
 /* toc */
 .toc {
